# integrator2

./: CMakeLists.txt  Doxyfile  README.md
cmake/: functions.cmake
docs/: _mesh3d_8cu.html  _mesh3d_8cu.js  _mesh3d_8cuh.html  _mesh3d_8cuh.js  _mesh3d_8cuh_source.html  _numerical_integrator3d_8cu.html  _numerical_integrator3d_8cu.js  _numerical_integrator3d_8cuh.html  _numerical_integrator3d_8cuh.js  _numerical_integrator3d_8cuh_source.html  _quadrature_formula3d_8cuh.html  _quadrature_formula3d_8cuh.js  _quadrature_formula3d_8cuh_source.html  annotated.html  annotated_dup.js  class_evaluator3_d-members.html  class_evaluator3_d.html  class_evaluator3_d.js  class_evaluator_j3_d_k-members.html  class_evaluator_j3_d_k.html  class_evaluator_j3_d_k.js  class_gpu_timer-members.html  class_gpu_timer.html  class_gpu_timer.js  class_mesh3_d-members.html  class_mesh3_d.html  class_mesh3_d.js  class_numerical_integrator3_d-members.html  class_numerical_integrator3_d.html  class_numerical_integrator3_d.js  classes.html  constants_8h.html  constants_8h.js  constants_8h_source.html  cuda__helper_8cu.html  cuda__helper_8cu.js  cuda__helper_8cuh.html  cuda__helper_8cuh.js  cuda__helper_8cuh_source.html  cuda__math_8cu.html  (+56 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_18.js  all_19.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+48 more)
scripts/: readIntegrals.m
src/: Mesh3d.cu  Mesh3d.cuh  NumericalIntegrator3d.cu  NumericalIntegrator3d.cuh  QuadratureFormula3d.cuh  mainpage.dox
src/common/: constants.h  cuda_helper.cu  cuda_helper.cuh  cuda_math.cu  cuda_math.cuh  cuda_memory.cuh  device_vector.cuh  gpu_timer.cuh
src/evaluators/: evaluator3d.cu  evaluator3d.cuh  evaluatorJ3DK.cu  evaluatorJ3DK.cuh
tests/integrator3D/: CMakeLists.txt  main.cu
