CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

include(CMakePrintHelpers)

SET(PROJECT_NAME "integrator2test3D")
SET(PROJECT_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(${PROJECT_ROOT_PATH}/../../cmake/functions.cmake)

if(NOT INTEGRATOR_LIB_DIR)
    SET(INTEGRATOR_LIB_DIR "${PROJECT_ROOT_PATH}/../../install")
endif()

add_executable(${PROJECT_NAME} main.cu)
setup_cuda(${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME} PRIVATE integrator2)

set_target_properties(${PROJECT_NAME} PROPERTIES BUILD_WITH_INSTALL_RPATH FALSE)
set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH "${INTEGRATOR_LIB_DIR}/lib")
set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)

install(TARGETS ${PROJECT_NAME} DESTINATION bin)
